# PhysioLabXR-Community

./:  - Copy.gitignore  .gitignore  .gitmodules  LICENSE  MANIFEST.in  MainWindow.py  PhysioLab.generated.sln  README.md  RandFile.py  config.py  config_signal.py  config_ui.py  image_labels.p  log  main.py  marked_eeg_results.csv  ngram_model.pkl  ngram_model_interpolate.pkl  pyproject - Copy.toml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.dev - Copy.txt  requirements.dev.txt  requirements.py  requirements.txt  setup.py  stream_shared.py  t2c.pkl  tox.ini
.github/workflows/: test-ubuntu.yml  unit-tests.yml
John_EEG_Project/: ICA_test.py
John_EEG_Project/eeg_ica_test/: 09_15_2021_02_06_59-Exp_eegmu-Sbj_ag-Ssn_0.dats  09_15_2021_02_10_20-Exp_eegmu-Sbj_ag-Ssn_1.dats  09_15_2021_02_15_10-Exp_eegmu-Sbj_ag-Ssn_2.dats  ica_test.py
John_EEG_Project/preprocessing_utils/: eeg_preprocessing.py
John_EEG_Project/signal_processing_test/: signal_processing_test.py
John_EEG_Project/tutorial/: ICA_test.py  fif_read_test.py  raw_data_structure.py
LSLPresets/: BAlert.json  BAlertX24.json  BioSemiActiveOne.json  BioSemiActiveTwo.json  DEAPBioSemi.json  Dummy_LSL.json  GoogleAIY.json  OpenBCICyton8.json  UnityEventMarker.json  UnityEyeData.json  UnityHeadTracking.json  UnityRotationWheelEventMarkers.json  UnityVisualSearchEventMarkers.json  dummy.json
MGH/TMS_Project/: aapo_data_test.py  aapo_evoked_responses.pickle  exg_utils.py  test.py
Presets/: README
Presets/Deprecated/: NIRSport2.json  OpenBCICyton8.json  TImmWave.json  XeThruX4M300.json
Presets/DevicePresets/: BrainflowOpenBCICyton8.json  Dummy_device.json  OpenBCICyton8.json  OpenBCICytonDaisy16.json  TImmWave.json  XeThruX4M300.json
Presets/ExperimentPresets/: LIINC-ADCT.json  LIINC-RealityNavigation.json  ReNa.json  (+5 more)
examples/: ERPExtraction.py  FixationDetection.py  FixationDetectionGapFill.py  FixationDetectionNoVideo.py  FixationDetectionWhileVideo.py
exceptions/: exceptions.py
exmaples/: ArduinoSerialTest.py  BrainflowTest.py  CaptureDelayTest.py  CreateVideo.py  LSLInletTest.py  LSLOutletTest.py  NetworkTest.py  RNStream.py  RNStreamLoadSpeed.py  RNStream_reshape_test.py  RNStream_test.py  ScalpPlotTest.py  ScalpPlotTestMNE.py  SynchronizationTest.py  TobiiLSLTest.py  xdfTest.py
inference/: InferenceComplete.py  encoder.p  inference.py  minmax.p
interfaces/: AIYVoiceInterface.py  InferenceInterface.py  LSLInletInterface.py  MmWaveSensorLSLInterface.py  OpenBCIInterface.py  OpenBCILSLInterface.py  SimulationInterface.py  UnityLSLInterface.py  WebcamInterface.py
offline/: CleanEventMarker.py  CleanEventMarkers.py  ParseData.py  ParseDataRNStream.py  ParseRNStreamToMatlab.py
paper/: paper.bib  paper.md
physiolabxr/: ERPClassifier.py  PhysioLabXR.py  __init__.py
recycle_bin/: OptionsWindowPlotFormatWidget.py  StreamGroupView.py  StreamOptionsWindow.py  garbage_code.py  offline_analysis.py  setup.py
rena/: MainServer.py  MainWindow.py  PhysioLabXR.py  config.py  config_ui.py  load_asset_file.py  main.py  shared.py  startup.py  ui_shared.py
rena/deprecated/: FixationDetectionVideo.py  setup.cfg  uiconvert.sh
src/: MainWindow.py  config_signal.py  main.py
temp_rpc_path/: temp_rpc_path.csproj
tests/: ArduinoSerialTest.py  CsvTest - Copy.py  CsvTest.py  Dtest.py  DummyTest.py  DummyTest.sh  LSLBinaryTest.py  LSLInletTest.py  LSLOutletTest.py  LSLTestStream.py  MatTest - Copy.py  MatTest.py  PerformanceBenchmark.py  PlotReplayPerformanceBenchmark.py  PlotVizPerformanceBenchmar.py  PresetTest.py  RNStreamTests.py  RNStream_test.py  RPCTest.py  RecordingTest.py  RemoteProceduralCallTest.py  RenaScriptingTest - Copy.py  RenaScriptingTest.py  RenaStreamChangeChannelGroupNameTest.py  RenaStreamOptionsTest - Copy.py  RenaStreamOptionsTest.py  RenaVisualizationTest.py  ReplayTest.py  ScalpPlotTest.py  ScalpPlotTestMNE.py  SetupTest.py  StartupTest - Copy.py  StartupTest.py  SynchronizationTest.py  TestStream.py  TobiiLSLTest.py  TobiiTest.py  UIFunctionsTest.py  UIUtilsTest.py  VisualizationLSLChannelTest - Copy.py  (+18 more)
threadings/: workers.py
tmpGrpcTools/: tmpGrpcTools - Copy.csproj  tmpGrpcTools.csproj
ui/: AddWidget.ui  CloseDialog.ui  CloudTab.py  CloudTab.ui  FMRIWidgetNew.ui  OptionsWindowPlotFormatWidget.ui  RecordingConversionDialog.ui  RecordingsTab.py  RecordingsTab.ui  ReplayStreamHeaderWidget.ui  ReplayStreamListItemWidget.ui  ReplayTab.py  ReplayTab.ui  ScriptConsoleLog.ui  ScriptingOutputWidget.ui  ScriptingWidget.ui  SettingsTab.py  SettingsTab.ui  SettingsWidget.ui  SignalSettingsTab.py  SignalSettingsTab.ui  StreamOptionsWindow.ui  StreamWidget.ui  mainwindow.ui
utils/: README.md  data_utils.py  dataflow_handler.py  general.py  pubsub_handler.py  realtime_DSP.py  sig_proc_utils.py  sim.py  ui_utiles.py  ui_utils.py  wordcount.py
(+1317 files in other folders)
