[metadata]
name = ReNaLabApp
version = 0.0.1.dev4
author = ApocalyVec
author_email = s-vector.lee@hotmail.com
description = Reality Navigation Lab App
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ApocalyVec/RealityNavigation
project_urls =
    Bug Tracker = https://github.com/ApocalyVec/RealityNavigation/issues
    Documentation = https://realitynavigationdocs.readthedocs.io/en/latest/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src